fix(markdown): Internal spacing in table

--- a/src/_sass/components/_markdown.scss
+++ b/src/_sass/components/_markdown.scss
@@ -200,25 +200,25 @@
     }
 
     th, td {
-      padding: 5px 25px;
+      padding: 5px 10px;
 
       &:first-of-type {
-        padding-left: 15px;
+        padding-left: 5px;
       }
 
       &:last-of-type {
-        padding-right: 15px;
+        padding-right: 5px;
       }
 
       @include breakpoint(medium up) {
         padding: 10px 35px;
 
         &:first-of-type {
-          padding-left: 5px;
+          padding-left: 15px;
         }
 
         &:last-of-type {
-          padding-right: 5px;
+          padding-right: 15px;
         }
       }
     }
